# CTBC_repo_daily_reload

./: .env.example  .gitignore  README.md  cleanup_tool.py  debug.py  error_handler.py  log.py  main.py  pyproject.toml  requirements.txt  sync_repos.py  utils.py
.github/workflows/: build-release.yml
config/: .env.example
scripts/: build_macos.sh
