[project]
name = "ctbc-repo-daily-reload"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cryptography==45.0.3",
    "deprecated==1.2.18",
    "dotenv==0.9.9",
    "idna==3.10",
    "macholib==1.16.3",
    "packaging==25.0",
    "pycparser==2.22",
    "pygithub==2.6.1",
    "pyinstaller==6.14.1",
    "pyinstaller-hooks-contrib==2025.5",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "setuptools==80.9.0",
    "typing-extensions==4.14.0",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
]
